# Function-Plotter

./: .gitigonore  README.md  main.py  plotter.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  tests.yml
app/: plotter.py
app/tests/: conftest.py  test_plotter.py  test_validation.py
app/utils/: constants.py  plot_option.py  validation.py
backend/: function_processor.py
frontend/: plotter.py
src/app/: plotter.py
src/app/utils/: constants.py  plot_option.py  validation.py
tests/: conftest.py  test_plotter.py  test_validation.py
utils/: validation.py
