[metadata]
name = app
author = Medhat Mohammed
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7

[options]
packages =
    app
install_requires =
    matplotlib==3.5.3
    PySide6==6.3.2
    numpy==1.21.6
    sympy==1.10.1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
app = py.typed

[flake8]
max-line-length = 160